# coolreader

./: README.TXT
android/: AndroidManifest.xml
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/jni/: Android.mk  cr3engine.cpp  cr3java.cpp  cr3java.h  docview.cpp
android/res/layout/: about_dialog_app.xml
android/res/values/: strings.xml
android/res/values-ru/: strings.xml
android/src/org/coolreader/: CoolReader.java
android/src/org/coolreader/crengine/: AboutDialog.java  BaseActivity.java  BookInfoEditDialog.java  BookSearchDialog.java  CRRootView.java  DocumentFormat.java  FileBrowser.java  FileInfo.java  OPDSCatalogEditDialog.java  OnlineStoreBookInfoDialog.java  OptionsDialog.java  ReaderView.java  SearchDlg.java  Settings.java
android/src/org/coolreader/db/: CRDBService.java  CRDBServiceAccessor.java  MainDB.java
android/src/org/coolreader/graphics/: FastBlur.java
android/src/org/coolreader/sync2/: Synchronizer.java
cr3android/app/: build.gradle
cr3android/app/src/main/: AndroidManifest.xml
cr3qt/src/: cr3widget.cpp  crqtutil.cpp  filepropsdlg.cpp  main.cpp  mainwindow.cpp
crengine/: CMakeLists.txt
crengine/include/: cp_stats.h  cr3version.h  crbookmark.h  crconcurrent.h  crengine.h  crfilehist.h  crfilehistrecord.h  crfilelogger.h  crgui.h  crlocks.h  crlog.h  crsetup.h  crskin.h  ldomnameidmap.h  ldomnameidmapitem.h  lvarray.h  lvautoptr.h  lvbasedrawbuf.h  lvbasefont.h  lvbitmapfont.h  lvbitmapfontman.h  lvcolordrawbuf.h  lvcompactarray.h  lvcrc32.h  lvdocview.h  lvdomcache_p.h  lvdomdoc.h  lvdomdoccache.h  lvdomdocfragwriter.h  lvdomdocwriter.h  lvdomdocwriterfilter.h  lvdomelwriter.h  lvdomimpstlparser_p.h  lvdrawbuf.h  lvdrawstatesaver.h  lvembeddedfont.h  lvfastref.h  lvfntman.h  lvfont.h  lvfontboldtrans.h  (+35 more)
crengine/src/: chmfmt.cpp  crbookmark.cpp  crconcurrent.cpp  crfilehist.cpp  crfilehistrecord.cpp  crfilelogger.cpp  crgui.cpp  cri18n.cpp  crlog.cpp  crskin.cpp  crtxtenc.cpp  docxfmt.cpp  epubfmt.cpp  hist.cpp  hyphman.cpp  ldomnameidmap.cpp  ldomnameidmapitem.cpp  lvbasedrawbuf.cpp  lvbasefont.cpp  lvbitmapfont.cpp  lvbitmapfontman.cpp  lvcolordrawbuf.cpp  lvcrc32.cpp  lvdocview.cpp  lvdomcache_p.cpp  lvdomdoc.cpp  lvdomdoccache.cpp  lvdomdocfragwriter.cpp  lvdomdocwriter.cpp  lvdomdocwriterfilter.cpp  lvdomelwriter.cpp  lvdomimpstlparser_p.cpp  lvdrawbuf.cpp  lvembeddedfont.cpp  lvfntman.cpp  lvfont.cpp  lvfontboldtrans.cpp  lvfontcache.cpp  lvfontglyphcache.cpp  lvfontman.cpp  (+26 more)
crengine/unused/: changeinfo.cpp  changeinfo.h  lvarrayqueue.h  lvcloneptr.h  lvuniqueptr.h
icons_src/: convert_all.pl
